Updated some tests that did not work with a new version of Matcher. The tests are not currently being run properly by jaccept.